--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -4,7 +4,8 @@
 
 .page-container {
   display: flex;
-  margin-top: 50px;
+  margin: 0 auto;
+  width: 900px;
 }
 
 .left-container {
@@ -12,8 +13,8 @@
   box-sizing: border-box;
   display: flex;
   justify-content: center;
-  width: 50%;
   padding: 20px;
+  width: 50%;
 }
 
 .right-container {
