--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -21,7 +21,9 @@
   align-items: center;
   box-sizing: border-box;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  padding: 20px;
   width: 50%;
 }
 
@@ -30,6 +32,7 @@
   border-radius: 10px;
   box-sizing: border-box;
   color: white;
+  min-height: 300px;
   padding: 20px;
   width: 100%;
 }
@@ -52,4 +55,11 @@
 .question {
   font-size: 1.2rem;
   text-align: center;
+}
+
+.btn-next {
+  border-radius: 3px;
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 300px;
 }
