--- a/src/components/SessionHeader.css
+++ b/src/components/SessionHeader.css
@@ -1,6 +1,7 @@
 .session-header {
   align-items: center;
-  background-color: #1d1f20;
+  background-color: #204051;
+  border-radius: 15px 15px 0 0;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -8,7 +9,7 @@
 }
 
 .gravatar-icon {
-  border: 3px solid white;
+  border: 3px solid #e4e3e3;
   border-radius: 50%;
   height: 50px;
   width: 50px;
