--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -1,5 +1,8 @@
 .game-page-container {
-  height: 100vh;
+  border-radius: 15px;
+  height: 70vh;
+  border: 2px solid #e4e3e3;
+  background: #3b6978;
 }
 
 .page-container {
@@ -28,7 +31,7 @@
 }
 
 .question-container {
-  background-color: #1d1f20;
+  background-color: #204051;
   border-radius: 10px;
   box-sizing: border-box;
   color: white;
