--- a/src/pages/Feedback.css
+++ b/src/pages/Feedback.css
@@ -9,35 +9,35 @@
   width: 900px;
 }
 
-.feedback-container h1 {
+.title {
   font-size: 40px;
 }
 
-.feedback-container h3 {
+.calls {
   font-size: 25px;
 }
 
 .btn {
-  box-shadow: inset 0px 1px 0px 0px #ffffff;
-  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   background-color: #ededed;
+  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   border-radius: 6px;
   border: 1px solid #dcdcdc;
-  display: inline-block;
-  cursor: pointer;
+  box-shadow: inset 0 1px 0 0 #ffffff;
   color: #777777;
+  cursor: pointer;
+  display: inline-block;
   font-family: Arial;
   font-size: 15px;
   font-weight: bold;
   margin-bottom: 15px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #ffffff;
+  text-shadow: 0 1px 0 #ffffff;
   width: 270px;
 }
 .btn:hover {
-  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
   background-color: #dfdfdf;
+  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
 }
 .btn:active {
   position: relative;
@@ -47,5 +47,4 @@
 .show-number {
   background-color: #204051;
   padding: 4px;
-  border-radius: 0;
 }
