--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,9 +1,9 @@
 .box {
   display: flex;
   flex-direction: column;
+  height: 600px;
   margin: 0 auto;
   width: 500px;
-  height: 600px;
 }
 
 .login {
@@ -24,35 +24,35 @@
 }
 
 .inputs input {
-  border: 1px solid #dcdcdc;
   border-radius: 6px;
+  border: 1px solid #dcdcdc;
   height: 30px;
-  padding: 0 10px;
   margin-bottom: 20px;
+  padding: 0 10px;
   width: 100%;
 }
 
 .btn {
-  box-shadow: inset 0px 1px 0px 0px #ffffff;
-  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   background-color: #ededed;
+  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   border-radius: 6px;
   border: 1px solid #dcdcdc;
-  display: inline-block;
-  cursor: pointer;
+  box-shadow: inset 0 1px 0 0 #ffffff;
   color: #777777;
+  cursor: pointer;
+  display: inline-block;
   font-family: Arial;
   font-size: 15px;
   font-weight: bold;
   margin-bottom: 15px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #ffffff;
+  text-shadow: 0 1px 0 #ffffff;
   width: 270px;
 }
 .btn:hover {
-  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
   background-color: #dfdfdf;
+  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
 }
 .btn:active {
   position: relative;
