--- a/src/pages/Ranking.css
+++ b/src/pages/Ranking.css
@@ -10,21 +10,21 @@
 }
 
 .btn {
-  box-shadow: inset 0px 1px 0px 0px #ffffff;
   background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   background-color: #ededed;
-  border-radius: 6px;
   border: 1px solid #dcdcdc;
-  display: inline-block;
-  cursor: pointer;
+  border-radius: 6px;
+  box-shadow: inset 0 1px 0 0 #ffffff;
   color: #777777;
+  cursor: pointer;
+  display: inline-block;
   font-family: Arial;
   font-size: 15px;
   font-weight: bold;
   margin-bottom: 15px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #ffffff;
+  text-shadow: 0 1px 0 #ffffff;
   width: 270px;
 }
 .btn:hover {
@@ -37,14 +37,14 @@
 }
 
 .rank-position {
+  align-items: center;
   background: #204051;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  width: 400px;
-  padding: 10px;
-  margin: 0 auto;
   margin-bottom: 15px;
+  margin: 0 auto;
+  padding: 10px;
+  width: 400px;
 }
 
 .rank-position img {
