--- a/src/components/AnswerOptions.css
+++ b/src/components/AnswerOptions.css
@@ -1,19 +1,19 @@
 .btn-answer {
   background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   background-color: #ededed;
-  border: 1px solid #dcdcdc;
+  border: 1px solid gainsboro;
   border-radius: 6px;
-  box-shadow: inset 0 1px 0 0 #ffffff;
-  color: #777777;
+  box-shadow: inset 0 1px 0 0 white;
+  color: #777;
   cursor: pointer;
   display: inline-block;
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   font-size: 15px;
-  font-weight: bold;
+  font-weight: 700;
   margin-bottom: 15px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 white;
   width: 390px;
 }
 
@@ -21,6 +21,7 @@
   background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
   background-color: #dfdfdf;
 }
+
 .btn-answer :active {
   position: relative;
   top: 1px;
