--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -24,7 +24,7 @@
 }
 
 .inputs input {
-  border: 1px solid #dcdcdc;
+  border: 1px solid gainsboro;
   border-radius: 6px;
   height: 30px;
   margin-bottom: 20px;
@@ -35,31 +35,34 @@
 .btn {
   background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   background-color: #ededed;
-  border: 1px solid #dcdcdc;
+  border: 1px solid gainsboro;
   border-radius: 6px;
-  box-shadow: inset 0 1px 0 0 #ffffff;
-  color: #777777;
+  box-shadow: inset 0 1px 0 0 white;
+  color: #777;
   cursor: pointer;
   display: inline-block;
-  font-family: Arial;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
-  font-weight: bold;
+  font-weight: 700;
   margin-bottom: 15px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 white;
   width: 270px;
 }
+
 .btn:hover {
   background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
   background-color: #dfdfdf;
 }
+
 .btn:active {
   position: relative;
   top: 1px;
 }
+
 .btn:disabled {
   background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
-  color: #bbbbbb;
+  color: #bbb;
   cursor: auto;
 }
