--- a/src/pages/Ranking.css
+++ b/src/pages/Ranking.css
@@ -1,7 +1,7 @@
 .ranking-container {
   background: #3b6978;
+  border: 2px solid #e4e3e3;
   border-radius: 15px;
-  border: 2px solid #e4e3e3;  
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -12,25 +12,27 @@
 .btn {
   background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   background-color: #ededed;
-  border: 1px solid #dcdcdc;
+  border: 1px solid gainsboro;
   border-radius: 6px;
-  box-shadow: inset 0 1px 0 0 #ffffff;
-  color: #777777;
+  box-shadow: inset 0 1px 0 0 white;
+  color: #777;
   cursor: pointer;
   display: inline-block;
-  font-family: Arial;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
-  font-weight: bold;
+  font-weight: 700;
   margin-bottom: 15px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 white;
   width: 270px;
 }
+
 .btn:hover {
   background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
   background-color: #dfdfdf;
 }
+
 .btn:active {
   position: relative;
   top: 1px;
@@ -41,8 +43,7 @@
   background: #204051;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 15px;
-  margin: 0 auto;
+  margin: 0px 0px 15px 0px;
   padding: 10px;
   width: 400px;
 }
